Ramesh: Refactoring of message responses and standardization between GRPC and Rest
